--- a/event-ssm_ver2/requirements.txt
+++ b/event-ssm_ver2/requirements.txt
@@ -1,8 +1,199 @@
---extra-index-url https://download.pytorch.org/whl/cu126
+absl-py==2.3.1
+aiofiles==25.1.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+appdirs==1.4.4
+apturl==0.5.2
+argcomplete==3.6.2
+attrs==21.2.0
+audioread==3.0.1
+bcrypt==3.2.0
+beniget==0.4.1
+blinker==1.4
+Brian2==2.9.0
+brian2hears==0.9.2
+Brlapi==0.8.3
+Brotli==1.0.9
+certifi==2020.6.20
+cffi==2.0.0
+chardet==4.0.0
+chex==0.1.90
+click==8.0.3
+cmake==4.2.1
+colorama==0.4.4
+cpuset==1.6
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.11.0
+Cython==3.2.2
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+Deprecated==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+duplicity==0.8.21
+dv_processing==2.0.2
+etils==1.13.0
+expelliarmus==1.1.12
+fasteners==0.14.1
+filelock==3.24.2
+flatbuffers==25.9.23
+flax==0.10.7
+fonttools==4.29.1
+fs==2.4.12
+fsspec==2026.2.0
+future==0.18.2
+gast==0.5.2
+gitdb==4.0.12
+GitPython==3.1.45
+h5py==3.15.1
+httplib2==0.20.2
+humanize==4.14.0
+hydra-core==1.3.2
+idna==3.3
+importlib-metadata==4.6.4
+importlib_resources==6.5.2
+importRosbag==1.0.4
+jax==0.6.2
+jax-cuda12-pjrt==0.6.2
+jax-cuda12-plugin==0.6.2
+jaxlib==0.6.2
+jaxtyping==0.3.3
+jeepney==0.7.1
+jetson-examples==0.2.4
+Jetson.GPIO==2.1.7
+jetson-stats==4.3.2
+Jinja2==3.1.6
+joblib==1.5.2
+keyring==23.5.0
+kiwisolver==1.3.2
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.45.1
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+macaroonbakery==1.3.1
+Mako==1.1.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.5.1
+mdurl==0.1.2
+ml_dtypes==0.5.3
+monotonic==1.6
+more-itertools==8.10.0
+mpmath==1.3.0
+msgpack==1.1.2
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.13.0
+numba==0.62.1
 numpy==1.26.4
-torch==2.8.0
-torchvision==0.23.0
-torchaudio==2.8.0
-wandb
-tonic
-hydra-core
+nvidia-cublas-cu12==12.9.1.4
+nvidia-cuda-cupti-cu12==12.9.79
+nvidia-cuda-nvcc-cu12==12.9.86
+nvidia-cuda-nvrtc-cu12==12.9.86
+nvidia-cuda-runtime-cu12==12.9.79
+nvidia-cudnn-cu12==9.14.0.64
+nvidia-cufft-cu12==11.4.1.4
+nvidia-cusolver-cu12==11.7.5.82
+nvidia-cusparse-cu12==12.5.10.65
+nvidia-cusparselt-cu12==0.8.1
+nvidia-nccl-cu12==2.28.3
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvshmem-cu12==3.4.5
+oauthlib==3.2.0
+olefile==0.46
+omegaconf==2.3.0
+onboard==1.4.1
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optax==0.2.6
+orbax-checkpoint==0.11.25
+packaging==26.0
+pandas==1.3.5
+paramiko==2.9.3
+pbr==7.0.1
+pexpect==4.8.0
+Pillow==9.0.1
+pip==25.3
+platformdirs==4.5.0
+ply==3.11
+pooch==1.8.2
+protobuf==6.33.0
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycparser==2.23
+pycups==2.0.1
+pydantic==2.12.3
+pydantic_core==2.41.4
+Pygments==2.19.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+PyOpenGL==3.1.5
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
+python-dbusmock==0.27.5
+python-debian==0.1.43+ubuntu1.1
+pythran==0.10.0
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+requests==2.25.1
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.15.3
+SecretStorage==3.3.1
+sentry-sdk==2.42.0
+setuptools==82.0.0
+simplejson==3.20.2
+six==1.16.0
+smbus2==0.5.0
+smmap==5.0.2
+sounddevice==0.5.3
+soundfile==0.13.1
+soxr==1.0.0
+sympy==1.13.1
+systemd-python==234
+tensorrt==10.3.0
+tensorrt_dispatch==10.3.0
+tensorrt_lean==10.3.0
+tensorstore==0.1.78
+threadpoolctl==3.6.0
+tomlkit==0.13.3
+tonic==1.6.0
+toolz==1.1.0
+torch==2.5.0a0+872d972e41.nv24.8
+torchaudio==2.5.0a0+56bc006
+torchvision==0.24.0
+tqdm==4.67.1
+treescope==0.1.10
+typing_extensions==4.15.0
+typing-inspection==0.4.2
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.13.1
+unicodedata2==14.0.0
+urllib3==2.5.0
+urwid==2.1.2
+wadler_lindig==0.1.7
+wadllib==1.3.6
+wandb==0.22.2
+wheel==0.46.3
+wrapt==1.17.3
+xdg==5
+xkit==0.0.0
+xmltodict==1.0.2
+yq==3.4.3
+zipp==1.0.0
+zstd==1.5.7.2
